Fix links (dead and otherwise)
Also changed the tag in the single-board example

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -20,6 +20,7 @@ logging:
     # org.springframework.security.web: TRACE
     org.springframework.security.web.csrf.CsrfFilter: DEBUG
     # Because when that filter says no it is MYSTERIOUS otherwise!
+    org.apache.jasper.servlet.TldScanner: WARN
 
 spring:
   main:
