MANY fixes, but not yet working
Something goes wrong during deletion so the boards don't get deallocated

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -50,5 +50,7 @@ cxf:
     classes-scan-packages:
       uk.ac.manchester.spinnaker.alloc,org.apache.cxf.jaxrs.swagger,org.apache.cxf.metrics
 
+# spalloc.transceiver.dummy: true
+
 #cxf.rest.path: /
 #num.threads: 16
